--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="icon" type="image/svg+xml" href="/react.svg" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+	</head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-
-<body>
-    <div id="root"></div>
-</body>
-
+	<body>
+		<!-- Корневой элемент для всего приложения -->
+		<div id="root"></div>
+		<!-- Корневой элемент для модальных окон -->
+		<div id="react-modals"></div>
+		<!-- Корневой элемент для уведомлений на сайте -->
+		<div id="react-notifications"></div>
+	</body>
 </html>
